<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:id="@+id/ll_finished_info_area"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_finish_activity"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/tv_finish_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="bottom"
            android:text="@string/end"
            android:textColor="@color/accent"
            android:textSize="28sp"
            android:textStyle="bold" />
        <FrameLayout
            android:layout_width="103dp"
            android:layout_height="101dp"
            android:background="@drawable/item_circular_color_accent_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_done"
                android:gravity="center">
            </ImageView>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_dark"
            android:text="@string/congratulations"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingTop="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_dark"
            android:text="@string/you_have_completed_the_workout"
            android:textStyle="bold"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/btn_finish"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="80dp"
            android:textSize="18sp"
            android:text="@string/finish"
            >
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>